# nano-verl

./: .gitignore  README.md  README_CN.md  main.py  pyproject.toml
configs/: gsm8k-qwen3-0.6b-single-gpu.yaml  gsm8k-qwen3-1.7b-1p1-async.yaml
data/gsm8k/: test.parquet  train.parquet
nanoverl/: __init__.py  algorithms.py  config.py  data.py  logging.py  main.py
nanoverl/actor/: __init__.py  actor_manager.py  fsdp_worker.py
nanoverl/datasets/: __init__.py  parquet_dataset.py
nanoverl/reward/: __init__.py  reward.py  reward_manager.py
nanoverl/rollout/: __init__.py  load_balancer.py  rollout_manager.py  vllm_server.py
nanoverl/sync/: __init__.py  base_engine.py  naive_sync_engine.py  nccl_sync_engine.py  sync_manager.py  weight_payload.py
nanoverl/trainer/: __init__.py  trainer.py
